ingress-weltvree-prod-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: athule-ingress
  namespace: default
  # annotations:
    # ingress.gcp.kubernetes.io/pre-shared-cert: "weltevree","weltevree-main", "weltevree-redirect"
    # kubernetes.io/ingress.global-static-ip-name: "ws-public-loadbalancer"
    # networking.gke.io/v1beta1.FrontendConfig: ing-redirect-https
spec:
  - http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: neg-weltevree-svc
              port:
                number: 80
